[package]
name = "azul-desktop"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = "Desktop rendering API for azul"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[dependencies]
tinyfiledialogs         = { version = "3.8.3",  default-features = false }
clipboard2              = { version = "0.1.1",  default-features = false }
raw-window-handle       = { version = "0.3.3", default-features = false }
azulc                   = { path = "../azulc", version = "0.0.3",  default-features = false, features = ["image_loading", "font_loading"] }
azul-css                = { path = "../azul-css", version = "0.0.1",  default-features = false }
azul-core               = { path = "../azul-core", version = "0.0.2",  default-features = false }
azul-layout             = { path = "../azul-layout", version = "0.0.4",  default-features = false, features = ["text_layout"] }
azul-text-layout        = { path = "../azul-text-layout", version = "0.0.5", default-features = false }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1",  default-features = false, optional = true }
log                     = { version = "0.4.8",  default-features = false, optional = true }
fern                    = { version = "0.5.7",  default-features = false, optional = true }
backtrace               = { version = "0.3.60" }
rust-fontconfig         = { version = "0.1.5", default-features = false, features = ["std"] }
strfmt                  = { version = "0.1.6", default-features = false }
libm                    = { version = "0.2.1", default-features = false }
gl-context-loader       = { version = "0.1.4", default-features = false }
webrender               = { version = "0.62.1", package = "azul-webrender", default-features = false, features = ["freetype-lib"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
coarsetime              = { version = "0.1.19", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi                  = { version = "0.3.9", default-features = false, features = ["windowsx", "libloaderapi", "errhandlingapi", "winuser", "uxtheme", "dwmapi", "wingdi"] }

# x11-dl

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.9.0",     default-features = false, features = ["mac_os_10_7_support"] }

[features]
default = [
    "std", "logging", "css_parser",
    "font_loading", "text_layout", "svg", "xml",
    "image_loading", "gif", "jpeg", "png", "tiff", "bmp",
    "use_fern_logger"
]
std = ["azul-core/multithreading", "azul-core/std"]
use_pyo3_logger = []
use_fern_logger = ["fern"]
logging = ["log"]
css_parser = ["azul-core/css_parser", "azul-css-parser"]
font_loading = ["azulc/font_loading"]
text_layout = ["azulc/text_layout"]
svg = ["azulc/svg", "xml"]
xml = ["azulc/xml"]
image_loading = ["azulc/image_loading", "std"]
gif = ["image_loading", "azulc/gif"]
jpeg = ["image_loading", "azulc/jpeg"]
png = ["image_loading", "azulc/png"]
tiff = ["image_loading", "azulc/tiff"]
bmp = ["image_loading", "azulc/bmp"]
ico = ["image_loading", "azulc/ico"]
tga = ["image_loading", "azulc/tga"]
hdr = ["image_loading", "azulc/hdr"]
dxt = ["image_loading", "azulc/dxt"]
webp = ["image_loading", "azulc/webp"]
pnm = ["image_loading", "azulc/pnm"]
no_static_freetype = ["webrender/no_static_freetype"]