[package]
name = "azul-dll"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = "C-API of Azul GUI"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
build = "build.rs"
autoexamples = false

[[bin]]
name = "azul-dll"
path = "main.rs"
edition = "2018"

[lib]
name = "azul"
edition = "2018"
crate-type = ["cdylib", "staticlib", "rlib"]
doc = false

[profile.dev]
opt-level = 1
lto = false
panic = "unwind"
debug = false

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
overflow-checks = false
incremental = false

[dependencies]
azul-core = { path = "../azul-core", version = "0.0.2", default-features = false, features = ["opengl"] }
pyo3 = { version = "0.13.2", default-features = false, features = ["extension-module", "macros", "auto-initialize"], optional = true }
log  = { version = "0.4.8",  default-features = false, optional = true }
pyo3-log = { version = "0.3.1", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
azul-desktop = { path = "../azul-desktop", version = "0.0.5", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
azul-web = { path = "../azul-web", version = "0.0.5", default-features = false }

[build-dependencies]
tar = "0.4"
flate2 = "1.0.14"

[features]
default = [
    "std", "logging", "css_parser", "image_loading", "ico", "tga",
    "hdr", "jpeg", "dxt", "webp", "pnm", "font_loading",
    "text_layout", "svg", "xml", "gif", "jpeg", "png", "tiff", "bmp"
]
std = ["azul-core/std", "azul-desktop/std", "azul-core/multithreading"]
logging = ["azul-desktop/logging", "log"]
use_fern_logger = ["azul-desktop/use_fern_logger", "logging"]
use_pyo3_logger = ["azul-desktop/use_pyo3_logger", "pyo3-log", "logging"]
css_parser = ["azul-desktop/css_parser"]
image_loading = ["azul-desktop/image_loading"]
gif = ["image_loading", "azul-desktop/gif"]
jpeg = ["image_loading", "azul-desktop/jpeg"]
png = ["image_loading", "azul-desktop/png"]
tiff = ["image_loading", "azul-desktop/tiff"]
bmp = ["image_loading", "azul-desktop/bmp"]
ico = ["image_loading", "azul-desktop/ico"]
tga = ["image_loading", "azul-desktop/tga"]
hdr = ["image_loading", "azul-desktop/hdr"]
dxt = ["image_loading", "azul-desktop/dxt"]
webp = ["image_loading", "azul-desktop/webp"]
pnm = ["image_loading", "azul-desktop/pnm"]
font_loading = ["azul-desktop/font_loading"]
text_layout = ["azul-desktop/text_layout"]
svg = ["azul-desktop/svg"]
xml = ["azul-desktop/xml"]
cdylib = []
rlib = []
staticlib = []

# predefined target configurations, additional to default config
desktop-cdylib = [
    "cdylib", "use_fern_logger" # use fern, build as DLL
]
desktop-staticlib = [
    "cdylib", "use_fern_logger" # use fern, build as staticlib
]
rust-static = [
    "cdylib", "use_fern_logger" # use fern, build as rust dependency (rlib)
]
python-extension = [
    "cdylib", "pyo3", "use_pyo3_logger" # use pyo3-log, build as DLL, enable python
]