[package]
name = "azul-dll"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "C-API of Azul GUI"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[[bin]]
name = "azul-dll"
path = "main.rs"
edition = "2018"

[lib]
name = "azul"
edition = "2018"
crate-type = ["cdylib", "staticlib", "rlib"]
doc = false

[dependencies]
azul-core = { path = "../azul-core", version = "0.0.2", default-features = false }
pyo3 = { version = "0.16.3", default-features = false, features = ["abi3", "multiple-pymethods", "extension-module", "macros", "auto-initialize"], optional = true }
log  = { version = "0.4.14",  default-features = false, optional = true }
pyo3-log = { version = "0.6.0", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
azul-desktop = { path = "../azul-desktop", version = "0.0.5", default-features = false }

[features]
default = [
    "std", "logging", "css_parser", "image_loading", "ico", "tga",
    "hdr", "jpeg", "dxt", "webp", "pnm", "font_loading",
    "text_layout", "svg", "xml", "gif", "jpeg", "png", "tiff", "bmp"
]
# these are the features that currently HAVE to be present
# removing any of these features will lead to compile error
# this will be fixed in the future
minimal = [
    "std", "css_parser",
    "font_loading", "text_layout",
    "no_static_freetype",
]
std = ["azul-core/std", "azul-desktop/std", "azul-core/multithreading"]
logging = ["azul-desktop/logging", "log"]
use_fern_logger = ["azul-desktop/use_fern_logger", "logging"]
use_pyo3_logger = ["azul-desktop/use_pyo3_logger", "pyo3-log", "logging"]
css_parser = ["azul-desktop/css_parser"]
image_loading = ["azul-desktop/image_loading"]
gif = ["image_loading", "azul-desktop/gif"]
jpeg = ["image_loading", "azul-desktop/jpeg"]
png = ["image_loading", "azul-desktop/png"]
tiff = ["image_loading", "azul-desktop/tiff"]
bmp = ["image_loading", "azul-desktop/bmp"]
ico = ["image_loading", "azul-desktop/ico"]
tga = ["image_loading", "azul-desktop/tga"]
hdr = ["image_loading", "azul-desktop/hdr"]
dxt = ["image_loading", "azul-desktop/dxt"]
webp = ["image_loading", "azul-desktop/webp"]
pnm = ["image_loading", "azul-desktop/pnm"]
font_loading = ["azul-desktop/font_loading"]
text_layout = ["azul-desktop/text_layout"]
svg = ["azul-desktop/svg"]
xml = ["azul-desktop/xml"]
no_static_freetype = ["azul-desktop/no_static_freetype"]
cdylib = []
rlib = []
staticlib = []

# Predefined target configurations
desktop-cdylib = ["cdylib", "use_fern_logger"]
desktop-staticlib = ["staticlib", "use_fern_logger"]
rust-static = ["rlib", "use_fern_logger"]
python-extension = ["cdylib", "pyo3", "use_pyo3_logger"]

[package.metadata.deb]
maintainer = "Felix Schütt <felix.schuett@maps4print.com>"
extended-description = """
    AZUL GUI Toolkit (https://azul.rs).
    Cross-platform GUI toolkit written in Rust
    built using the WebRender rendering engine
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libazul.so", "usr/lib/", "755"]
]

[package.metadata.docs.rs]
no-default-features = true
features = [
    "std", "logging", "css_parser", "image_loading", "ico", "tga",
    "hdr", "jpeg", "dxt", "webp", "pnm", "font_loading",
    "text_layout", "svg", "xml", "gif", "jpeg", "png", "tiff", "bmp",
    "rlib", "use_fern_logger"
]
# rustdoc-args = ["--cfg", "docsrs"]