[package]
name = "azul-layout"
version = "0.0.4"
authors = ["Emil Sjölander <emil@visly.app>", "fschutt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Flexbox layout solver the Azul GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[lib]
path = "src/old/lib.rs"
# path = "src/new/lib.rs"

[dependencies]
azul-css            = { path = "../azul-css", version = "0.0.1", default-features = false }
azul-core           = { path = "../azul-core", version = "0.0.2", default-features = false, features = ["opengl"] }
azul-text-layout    = { path = "../azul-text-layout", version = "0.0.5", default-features = false, optional = true }
rayon               = { version = "1.5.0", default-features = false }
rust-fontconfig     = { version = "0.1.2", default-features = false }

[dev-dependencies]
azul-css-parser             = { path = "../azul-css-parser", version = "0.0.1"  }
azulc                       = { path = "../azulc", version = "0.0.3"  }

[features]
default = ["std"]
std = ["azul-core/multithreading"]
text_layout = ["azul-text-layout"]
