[package]
name = "azul-native-style"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    OS-native styles for use with the Azul desktop GUI framework
'''
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics", "native" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
exclude = ["assets/*", "doc/*", "examples/*"]
autoexamples = false
edition = "2018"

[dependencies]
azul-css                = { path = "../azul-css",          default-features = false }
azul-css-parser         = { path = "../azul-css-parser",   default-features = false }
