[package]
name = "azul-native-style"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    OS-native styles for use with the Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "native" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"

[dependencies]
azul-css                = { path = "../azul-css", version = "0.0.1",   default-features = false }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1",   default-features = false }
