[package]
name = "azul-text-layout"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = '''
    Text layout algorithms Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "native" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
readme = "./README.md"
autoexamples = false

[dependencies]
azul-css                = { path = "../azul-css", version = "0.0.1",   default-features = false }
azul-core               = { path = "../azul-core", version = "0.0.2", default-features = false }
unicode-normalization   = { version = "0.1.12",  default-features = false }
allsorts_no_std         = { version = "0.5.2", default-features = false }
tinyvec                 = { version = "1.2.0", default-features = false }
rayon                   = { version = "1.5.1", default-features = false }
ttf-parser              = { version = "0.11.0", default-features = false, features = ["variable-fonts"] }