[package]
name = "azul-web"
version = "0.0.3"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Web API implementation for the Azul GUI toolkit"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"

[dependencies]
azul-core = { version = "0.0.1", default-features = false }
azul-css  = { version = "0.0.1", default-features = false }