[package]
name = "azul"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false

[dependencies]
azul-css                = { version = "0.1.0",                path = "../azul-css"                              }
azul-native-style       = { version = "0.1.0",                path = "../azul-native-style",    optional = true }
azul-css-parser         = { version = "0.1.0",                path = "../azul-css-parser",      optional = true }
azul-dependencies       = { version = "0.1.0",                git = "https://github.com/maps4print/azul-dependencies", rev = "c1548977fb62399f39aa642d2e7e24a24a25246e" }
serde_derive            = { version = "1",                    optional = true }
serde                   = { version = "1",                    optional = true }

[features]
# The "SVG" feature only enables the creation of shapes / polygons, etc. not the actual parsing
# (which needs the `svg_parsing` feature).
default = [
    "logging",
    "native-style",
    "css-parser",
]
# Enable this feature to enable crash logging & reporting.
# Azul will insert custom panic handlers to pop up a message and log
# crashes to an "error.log" file, see AppConfig for more details
logging = ["azul-dependencies/logging"]
# The SVG rendering module is pretty huge since it needs lyon - if you don't use
# SVG rendering in your app, you can turn this off to increase compilation
# speed and decrease your binary size
svg = ["azul-dependencies/svg"]
# This is for activating **parsing** of SVG files. If you, for example, just
# want to draw shapes on the screen, you do not need to activate this feature,
# this is just for parsing the SVG from a file.
svg_parsing = ["azul-dependencies/svg_parsing", "svg"]
# If you want an application icon, you can either load it via the raw
# RGBA bytes or use the icon_loading feature to decode it from a PNG / JPG /
# whatever image format on startup. Note that this will import the image
# dependency and use a bit of extra runtime.
icon_loading = ["azul-dependencies/icon_loading"]
# For serializing / deserializing CSS colors using serde
serde_serialization = ["azul-dependencies/serde_serialization", "serde_derive", "serde"]
serde_serialization_css = ["css-parser", "azul-css-parser/serde_serialization", "serde_serialization"]
# On some applications you might not want to load any images. For these purposes
# the image crate can be disabled, to speed up compile times
image_loading = ["azul-dependencies/image_loading"]
# Features to load extra image formats
ico = ["azul-dependencies/ico"]
tga = ["azul-dependencies/tga"]
hdr = ["azul-dependencies/hdr"]
jpeg_rayon = ["azul-dependencies/jpeg_rayon"]
dxt = ["azul-dependencies/dxt"]
webp = ["azul-dependencies/webp"]
css-parser = ["azul-css-parser"]
native-style = ["azul-native-style"]

[[example]]
name = "debug"
path = "../examples/debug.rs"
required-features = ["svg_parsing"]

[[example]]
name = "async"
path = "../examples/async.rs"
required-features = []

[[example]]
name = "harfbuzz"
path = "../examples/harfbuzz.rs"
required-features = []

[[example]]
name = "hot_reload"
path = "../examples/hot_reload.rs"
required-features = ["image_loading"]

[[example]]
name = "table"
path = "../examples/table.rs"
required-features = []

[[example]]
name = "text_input"
path = "../examples/text_input.rs"
required-features = []

[[example]]
name = "list"
path = "../examples/list.rs"
required-features = []

[[example]]
name = "calculator"
path = "../examples/calculator.rs"
required-features = []

[[example]]
name = "dragger"
path = "../examples/dragger.rs"
required-features = []

[[example]]
name = "scroll_list"
path = "../examples/scroll_list.rs"
required-features = []

[[example]]
name = "game_of_life"
path = "../examples/game_of_life.rs"
required-features = []

[[example]]
name = "xml"
path = "../examples/xml.rs"
required-features = []

[[example]]
name = "opengl"
path = "../examples/opengl.rs"
required-features = []