[package]
name = "azul"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false
edition = "2018"

[lib]
path = "src/rust/lib.rs"

[dependencies]
libloading-mini = "0.1.0"

[dev-dependencies]
azul-widgets = { version = "0.0.2", path = "../azul-widgets" }

[[example]]
name = "public"
path = "../examples/public/public.rs"
required-features = []

[[example]]
name = "async"
path = "../examples/async/async.rs"
required-features = []

[[example]]
name = "calculator"
path = "../examples/calculator/calculator.rs"
required-features = []

[[example]]
name = "game_of_life"
path = "../examples/game_of_life/game_of_life.rs"
required-features = []

[[example]]
name = "hello_world"
path = "../examples/hello_world/hello_world.rs"
required-features = []

[[example]]
name = "hot_reload"
path = "../examples/hot_reload/hot_reload.rs"
required-features = ["image_loading"]

[[example]]
name = "list"
path = "../examples/list/list.rs"
required-features = []

[[example]]
name = "opengl"
path = "../examples/opengl/opengl.rs"
required-features = []

[[example]]
name = "slider"
path = "../examples/slider/slider.rs"
required-features = []

[[example]]
name = "svg"
path = "../examples/svg/svg.rs"
required-features = ["svg_parsing"]

[[example]]
name = "table"
path = "../examples/table/table.rs"
required-features = []

[[example]]
name = "text_input"
path = "../examples/text_input/text_input.rs"
required-features = []

[[example]]
name = "text_shaping"
path = "../examples/text_shaping/text_shaping.rs"
required-features = []

[[example]]
name = "transparent_window"
path = "../examples/transparent_window/transparent_window.rs"
required-features = []

[[example]]
name = "xml"
path = "../examples/xml/xml.rs"
required-features = []

[[example]]
name = "headless"
path = "../examples/headless/headless.rs"
required-features = []
