[package]
name = "azul"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false
edition = "2018"

[profile.dev]
incremental = false

[profile.release]
incremental = false

[lib]
path = "src/rust/lib.rs"

[dependencies]
libloading-mini = "0.1.1"

[dev-dependencies]
azul-widgets = { version = "0.0.2", path = "../azul-widgets" }
azul-core = { version = "0.0.2", path = "../azul-core" }
azul-layout = { version = "0.0.4", path = "../azul-layout" }

[[example]]
name = "public"
path = "../examples/public/public.rs"

[[example]]
name = "async"
path = "../examples/async/async.rs"

[[example]]
name = "calculator"
path = "../examples/calculator/calculator.rs"

[[example]]
name = "game_of_life"
path = "../examples/game_of_life/game_of_life.rs"

[[example]]
name = "hello_world"
path = "../examples/hello_world/hello_world.rs"

[[example]]
name = "hot_reload"
path = "../examples/hot_reload/hot_reload.rs"

[[example]]
name = "list"
path = "../examples/list/list.rs"

[[example]]
name = "opengl"
path = "../examples/opengl/opengl.rs"

[[example]]
name = "slider"
path = "../examples/slider/slider.rs"

[[example]]
name = "svg"
path = "../examples/svg/svg.rs"

[[example]]
name = "table"
path = "../examples/table/table.rs"

[[example]]
name = "text_input"
path = "../examples/text_input/text_input.rs"

[[example]]
name = "components"
path = "../examples/components/components.rs"

[[example]]
name = "xml"
path = "../examples/xml/xml.rs"

[[example]]
name = "headless"
path = "../examples/headless/headless.rs"
