[package]
name = "azulc"
version = "0.0.3"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "LGPL-3.0-only WITH LGPL-3.0-linking-exception"
description = '''
    Azul XML-to-Rust compiler (and library)
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2018"
autoexamples = false

[lib]
name = "azulc_lib"
path = "src/lib.rs"

[[bin]]
name = "azulc"
path = "src/main.rs"
required-features = [
    "xml", "std", "font_loading", "image_loading",
    "gif", "jpeg", "png", "tiff", "bmp", "text_layout"
]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
overflow-checks = false
incremental = false

[dependencies]
gl-context-loader       = { version = "0.1.3", default-features = false }
xmlparser               = { version = "0.13.3",          default-features = false }
azul-core               = { path = "../azul-core",       version = "0.0.2",          default-features = false }
azul-css                = { path = "../azul-css",        version = "0.0.1",          default-features = false }
azul-css-parser         = { path = "../azul-css-parser", version = "0.0.1",          default-features = false }
azul-layout             = { path = "../azul-layout",     default-features = false }
image                   = { version = "0.23.12",         default-features = false,       optional = true }
rust-fontconfig         = { version = "0.1.5",           default-features = false,       optional = true }
lyon                    = { version = "0.17.5",  default-features = false, optional = true }
rayon                   = { version = "1.5.1",   default-features = false, optional = true }
usvg                    = { version = "0.14.0",  default-features = false, optional = true }
resvg                   = { version = "0.15.0",  default-features = false, optional = true }
roxmltree               = { version = "0.14.0",  default-features = false, optional = true }
tiny-skia               = { version = "0.5.1",   default-features = false, optional = true, features = ["libm"] }

[features]
default = ["std", "text_layout"]
std = ["azul-core/std", "azul-layout/std", "rust-fontconfig/std"]
image_loading = ["image", "std"]
gif = ["image_loading", "image/gif"]
jpeg = ["image_loading", "image/jpeg", "image/jpeg_rayon"]
png = ["image_loading", "image/png"]
tiff = ["image_loading", "image/tiff"]
bmp = ["image_loading", "image/bmp"]
ico = ["image_loading", "image/ico"]
tga = ["image_loading", "image/tga"]
hdr = ["image_loading", "image/hdr"]
dxt = ["image_loading", "image/dxt"]
webp = ["image_loading", "image/webp"]
pnm = ["image_loading", "image/pnm"]
font_loading = ["rust-fontconfig", "std"]
text_layout = ["azul-layout/text_layout"]
svg = ["lyon", "tiny-skia", "rayon", "usvg", "resvg", "xml"]
xml = ["roxmltree"]