[package]
name = "azul-core"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = '''
    Common datatypes used for the Azul document object model, shared across all azul-* crates
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
autoexamples = false

[dependencies]
azul-css                = { version = "0.0.5", path = "../css", default-features = false }
libm                    = { version = "0.2.2",   default-features = false                   }
gl-context-loader       = { version ="0.1.8", default-features = false }
highway                 = { version = "0.8.0", default-features = false }
rust-fontconfig         = { version = "1.0.0", default-features = false }

[features]
default = ["std"]
# Enables the CSS parser
css_parser = ["azul-css/parser"]
# Enables hashing for timing and threading
std = ["css_parser"]