[package]
name = "azul-core"
version = "0.0.7"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = '''
    Common datatypes used for the Azul document object model, shared across all azul-* crates
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
resolver = "2"
autoexamples = false

[dependencies]
azul-css                = { version = "0.0.7", path = "../css", default-features = false, features = ["parser"] }
libm                    = { version = "0.2.2",   default-features = false                   }
gl-context-loader       = { version = "0.1.9", default-features = false }
highway                 = { version = "1.3.0", default-features = false }
rust-fontconfig         = { version = "2.0.0", default-features = false, features = ["std", "parsing"] }
serde                   = { version = "1.0", features = ["derive"], optional = true }
serde_json              = { version = "1.0", optional = true }

[features]
# Default: std + CSS parser
default = ["std"]

# Standard library support (includes CSS parser)
std = ["css_parser"]

# CSS parser support
css_parser = ["azul-css/parser"]

# Font parsing/introspection (adds allsorts via rust-fontconfig, heavier)
font_parsing = ["rust-fontconfig/parsing"]

# Serde support for ComponentDataModel and related types
serde-json = ["dep:serde", "dep:serde_json"]
