[package]
name = "azul-css"
version = "0.0.7"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = '''
    Common datatypes used for styling applications
    using the Azul desktop GUI framework
'''
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
resolver = "2"
autoexamples = false

[dependencies]
libm = { version = "0.2.2", default-features = false }
azul-simplecss = { version = "0.2.0", default-features = false, optional = true }
highway = { version = "1.3", default-features = false }
dirs-next = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
strum = { version = "0.26", default-features = false, features = ["derive"] }
strum_macros = { version = "0.26", default-features = false }

[features]
# Default features: CSS parser + file I/O
# NOTE: parser is REQUIRED, azul-css does not work without it
default = ["parser", "io"]

# CSS parser support (azul-simplecss) - REQUIRED
parser = ["dep:azul-simplecss"]

# File I/O and serialization support
io = ["dep:serde", "dep:serde_json", "dep:dirs-next"]

# Native OS discovery via dlopen / FFI.
# On macOS & Windows this uses raw dlopen / LoadLibrary – zero external crates.
# On Linux this optionally uses zbus (pure-Rust D-Bus) for XDG Desktop Portal queries.
system = []
